<resources>
    <string name="app_name">NoteMaker</string>

    <string name="title_of_note">Title of Note</string>
    <string name="open_a_note">Open a note</string>

    <string name="title">Title of your note</string>
    <string name="content">Enter your text here</string>

    <string name="share_note">Share note</string>
    <string name="date" translatable="false">01/01/2020</string>
    <string name="time" translatable="false">00:00</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_avatar">User avatar</string>

    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="share">Share</string>

    <string name="notes">Notes</string>
    <string name="action_theme">Theme</string>
    <string name="action_about">About</string>
    <string name="about_text_name" translatable="false">NoteMaker</string>
    <string name="about_text_dev_name">By Oleg Ryabyshev</string>
    <string name="about_text_telegram" translatable="false">Telegram: </string>
    <string name="about_text_email" translatable="false">Email: oryabyshev@gmail.com</string>
    <string name="about_text_version" translatable="false">Ver. 1.0.0</string>
    <string name="return_button">Return</string>

    <string name="action_theme_light">Light</string>
    <string name="action_theme_dark">Dark</string>

    <string name="welcome_title">Welcome</string>
    <string name="welcome_content">Your can edit this note</string>

    <string name="register">Register</string>
    <string name="log_in">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="get_from_firebase">Download from cloud</string>
    <string name="save_to_firebase">Save to cloud</string>
    <string name="not_logged_in_yet">Log in</string>
    <string name="welcome">Welcome, </string>
    <string name="logout">Logout</string>

</resources>