<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_notes"
                    android:icon="@drawable/ic_baseline_note"
                    android:title="@string/notes" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/ic_baseline_theme"
        android:title="@string/action_theme" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_baseline_info"
        android:title="@string/action_about" />

</menu>